# envdiff

./: LICENSE  README.md  diff.py  parser.py  pyproject.toml  reporter.py  test_envdiff.py
.github/workflows/: ci.yml
envdiff/: __init__.py  cli.py
