[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "envdiff"
version = "0.1.0"
description = "Compare .env files across environments — spot missing keys, value differences, and secret leaks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["dotenv", "env", "diff", "devops", "cli", "environment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
envdiff = "envdiff.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/yourusername/envdiff"
Repository = "https://github.com/yourusername/envdiff"
"Bug Tracker" = "https://github.com/yourusername/envdiff/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["envdiff*"]
